--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_height="match_parent"
-	tools:context=".MainActivity">
-	
-	<TextView
-		android:layout_width="wrap_content"
+	android:layout_width="match_parent"
+	android:orientation="vertical">
+	<Button
+		android:id="@+id/scheduleB"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:layout_width="match_parent"
+		android:text="@string/schedule"
+		android:onClick="scheduleClick"/>
+	<Button
+		android:id="@+id/notesB"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/notes"
+		android:onClick="notesClick"/>
+	<TextView
+		android:id="@+id/todayTV"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/today"/>
+	<TextView
+		android:id="@+id/noteTV"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/noNotes"
+		android:textColor="@color/text"
+		android:textSize="25sp"/>
+</LinearLayout>
