--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,12 @@
 		android:layout_width="match_parent"
 		android:text="@string/todayNotes"/>
 	<ScrollView
-		android:id="@+id/notesSV"
 		android:layout_width="match_parent"
-		android:layout_height="match_parent"/>
+		android:layout_height="match_parent">
+		<LinearLayout
+			android:id="@+id/notesLL"
+			android:layout_height="wrap_content"
+			android:layout_width="match_parent"
+			android:orientation="vertical"/>
+	</ScrollView>
 </LinearLayout>
