--- a/app/src/main/res/layout/activity_schedule_view.xml
+++ b/app/src/main/res/layout/activity_schedule_view.xml
@@ -34,9 +34,8 @@
 		android:layout_width="match_parent">
 		<LinearLayout
 			android:id="@+id/scheduleLL"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
-			android:orientation="vertical"
-			android:scrollbars="horizontal"/>
+			android:orientation="vertical"/>
 	</ScrollView>
 </LinearLayout>
