--- a/app/src/main/res/layout/activity_schedule_view.xml
+++ b/app/src/main/res/layout/activity_schedule_view.xml
@@ -37,7 +37,7 @@
 		android:layout_height="match_parent"
 		android:layout_width="match_parent">
 		<LinearLayout
-			android:id="@+id/scheduleLL"
+			android:id="@+id/scheduleEditLL"
 			android:layout_height="wrap_content"
 			android:layout_width="match_parent"
 			android:orientation="vertical"/>
